{
    "name": "TouchControl",
    "maps": [
        {
            "name": "Touch",
            "id": "f1644be1-9195-4a52-b095-19f64552e624",
            "actions": [
                {
                    "name": "TouchPressButton",
                    "type": "Button",
                    "id": "f2d6e774-2228-44e9-9e57-5e868123f920",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "c2d7b30b-3d43-4c4e-b352-ae83dd1f2c87",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5ab3d937-545c-42aa-b785-44d9b2038534",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPressButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6d56a47e-f1fe-460d-b3a1-39dd167ef897",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}